trunk/Archive2/e5/d77ce7c0cb738d/output
main.cpp:10:5: error: no matching function for call to 'foo'
    foo( X() ); // error
    ^~~
main.cpp:2:6: note: candidate function [with T = X] not viable: expects an l-value for 1st argument
void foo(T&) {}
     ^
main.cpp:13:5: error: no matching function for call to 'foo'
    foo( CI() ); // error
    ^~~
main.cpp:2:6: note: candidate function [with T = int] not viable: expects an l-value for 1st argument
void foo(T&) {}
     ^
2 errors generated.
